# phlorest

./: README.md  RELEASING.md  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
src/phlorest/: __init__.py  __main__.py  beast.py  check.R  check.py  cldfwriter.py  dataset.py  metadata.py  nexuslib.py  render.py  scaffold.py
src/phlorest/commands/: check.py  contrib.py  merge_characters.py  new.py  plot.py  release.py
src/phlorest/phlorest_template/: CONTRIBUTORS.md  cldfbench_+id+.py_tmpl  setup.py_tmpl  test.py
src/phlorest/phlorest_template/.github/workflows/: cldf-validation.yml
src/phlorest/phlorest_template/etc/: characters.csv  taxa.csv
tests/: conftest.py  test_beast.py  test_check.py  test_cldfwriter.py  test_cli.py  test_dataset.py  test_metadata.py  test_nexuslib.py  test_phlorest.py  test_render.py  test_scaffold.py
tests/repos/: cldfbench_phy.py  metadata.json
tests/repos/cldf/: Generic-metadata.json  languages.csv  media.csv  summary.trees  trees.csv
tests/repos/etc/: taxa.csv
tests/repos/raw/: beast.xml  data.nex  nexus.trees.bz2  posterior.trees  sources.bib  trees_with_rate.trees
