[metadata]
name = phlorest
version = 1.7.2.dev0
author = Simon Greenhill and Robert Forkel
author_email = dlce.rdm@eva.mpg.de
description = A cldfbench plugin to curate language phylogenies
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cldf
license = Apache 2.0
license_files = LICENSE
url = https://github.com/phlorest/phlorest
project_urls =
    Bug Tracker = https://github.com/phlorest/phlorest/issues
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    newick>=1.9
    commonnexus>=1.9
    cldfviz>=0.10
    pycldf>=1.33.0
    clldutils
    cldfbench>=1.10.0
    cldfcatalog
    attrs
    pyglottolog>=3.9.0
    termcolor
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
phlorest =
    phlorest_template/*
    check.R

[options.entry_points]
cldfbench.commands =
    phlorest = phlorest.commands
cldfbench.scaffold =
    phlorest = phlorest.scaffold:PhlorestTemplate
console_scripts =
    phlorest = phlorest.__main__:main

[options.extras_require]
dev =
    flake8
    wheel
    build
    twine
test =
    pyglottolog
    pytest>=5
    pytest-mock
    pytest-cov
    newick
    numpy

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,W503
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov
markers =
    noci: don't run with tox or CI
    slow: take a long time > 10secs
filterwarnings =
    ignore: an integer is required:DeprecationWarning

[easy_install]
zip_ok = false

[coverage:run]
source =
    phlorest
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py39, py310, py311, py312, py313
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
